[TASK] Fix mobile menu not showing login button
Related: T3DEMO-300

--- a/src/extensions/site_t3demo/Resources/Private/Scss/_header.scss
+++ b/src/extensions/site_t3demo/Resources/Private/Scss/_header.scss
@@ -46,7 +46,7 @@
 			position: initial;
 		}
 		&__meta {
-			position: absolute;
+			position: fixed;
 			height: 68px;
 			border-top: 1px solid $color-gray-light;
 			margin-top: calc(100vh - 68px);
